--- a/static/cmsimply.css
+++ b/static/cmsimply.css
@@ -2,7 +2,7 @@
   position: relative;
 }
 header{
-  background: #444;
+  background-image:url("http://img.technews.tw/wp-content/uploads/2015/06/11537710_1623530704597360_4893640500415688209_n-624x399.jpg");
   padding: 20px;
 }
 confmenu
